# semantic-commit-formatter

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: deploy.yaml
semantic_commit/: main.py
