[metadata]
name = semantic_commit
description = Parses git branch names and generates semantically valid commits.
version = 1.0
author = Seth Angell
author_email = work@sethangell.com
license = MIT
project_urls = 
    Homepage = https://github.com/SethAngell/semantic-commit-formatter
    Author = https://sethangell.com

[options]
packages = find:

[options.entry_points]
console_scripts =
    create_message = semantic_commit.main:main